2017-02-27  Eric Herman <eric@freesa.org>

	illustrate turning off endian check in demo

	* src/eba.c: EBA_SKIP_SHIFTS should skip shifts
	* Makefile.am: build with -DEBA_SKIP_ENDIAN
	* demos/sieve-of-eratosthenes.c: adjust comment


2017-02-26  Eric Herman <eric@freesa.org>

	added eba_ring_shift_right and _left functions
	and eba_shift_left, _right, _left_fill, _right_fill
	generalized the shifting code
	added macros for avoiding alloca and memcpy
	use EBA_CHAR_BIT instead of hardcoding 8 bits per byte
	EBA_SKIP_ENDIAN: endian-ness checking compile-time optional

	* src/eba.h: eba_ring_shift, eba_shift, memcpy, alloca
	* src/eba.c: eba_ring_shift, eba_shift, eba_diy_memcpy
	* tests/test-ring-shift.c: new test
	* Makefile.am: test-ring-shift
	* configure.ac: test for alloca
	* misc/pre-tidy.patch: hunk offset
	* .gitignore: test-ring-shift


2017-02-25  Eric Herman <eric@freesa.org>

	rename struct eba_s.size to eba_s.size_bytes
	Add eba_swap
	Add big or little endian support
	fix tests! very broken

	* src/eba.h: size_bytes, add "enum eba_endian", eba_swap
	* src/eba.c: support endian-ness, consolidate duplication
	* tests/test-get.c: size_bytes
		D'oh! over-writing failure; test big endian
	* tests/test-set.c: size_bytes, add big_endian test
	* tests/test-swap.c: new test, size_bytes
	* tests/test-toggle.c: size_bytes, add big_endian test
	* demos/sieve-of-eratosthenes.c: use eba_endian_little
	* Makefile.am: D'oh! used the test-set sources for all tests!
	* misc/pre-tidy.patch: respin for hunk offsets
	* .gitignore: test-swap


2017-02-24  Eric Herman <eric@freesa.org>

	use 1U for unsigned int constant used in shifts for clarity
	add "make demo" target for Sieve of Eratosthenes
	improve tests
	tidy comments

	* src/eba.c: factor out sanity checking code; 1U for clarity
	* Makefile.am: make demo
	* tests/test-toggle.c: add test, improve test
	* tests/test-get.c: fix message
	* tests/test-set.c: fix message
	* tests/eba-test-private-utils.h: 2017 copyright